Adiciona arquivos de configuração para Deploy no Render